--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.6.11",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "crypto-ts": "^1.0.2",
     "d3": "^5.15.0",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
@@ -42,6 +44,7 @@
     "ng2-charts": "^2.3.0",
     "rxjs": "^6.5.4",
     "saas": "^1.0.0",
+    "ts-md5": "^1.2.7",
     "web-animations-js": "^2.3.2",
     "zone.js": "^0.8.29"
   },
@@ -65,6 +68,7 @@
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.2",
+    "nodemailer": "^6.4.5",
     "protractor": "^5.4.3",
     "ts-node": "~7.0.1",
     "tslib": "^1.10.0",
