--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "crypto-ts": "^1.0.2",
     "d3": "^5.15.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "mongoose": "^5.9.1",
