--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,8 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": [{
+            "assets": [
+              {
                 "glob": "favicon.ico",
                 "input": "src",
                 "output": "/"
@@ -30,6 +31,7 @@
               }
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               {
                 "input": "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss"
               },
@@ -52,7 +54,8 @@
                 "input": "src/styles.scss"
               }
             ],
-            "scripts": [{
+            "scripts": [
+              {
                 "input": "node_modules/chart.js/dist/Chart.js"
               },
               {
@@ -62,10 +65,12 @@
           },
           "configurations": {
             "production": {
-              "fileReplacements": [{
-                "replace": "src/environments/environment.ts",
-                "with": "src/environments/environment.prod.ts"
-              }],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
@@ -102,11 +107,15 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
-            "styles": [{
-              "input": "src/styles.scss"
-            }],
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              {
+                "input": "src/styles.scss"
+              }
+            ],
             "scripts": [],
-            "assets": [{
+            "assets": [
+              {
                 "glob": "favicon.ico",
                 "input": "src/",
                 "output": "/"
