--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@agm/core": "^1.1.0",
     "@angular/animations": "^7.2.16",
+    "@angular/cdk": "^9.0.0",
     "@angular/core": "^7.2.16",
     "@angular/forms": "^7.2.16",
     "@angular/http": "^7.2.16",
@@ -25,6 +26,7 @@
     "@angular/platform-server": "^7.2.16",
     "@angular/router": "^7.2.16",
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "@swimlane/ngx-charts": "^13.0.2",
     "@types/d3-shape": "^1.3.2",
     "@types/rx": "^4.1.1",
