--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
               }
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               {
                 "input": "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss"
               },
@@ -102,7 +103,9 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
-            "styles": [{
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              {
               "input": "src/styles.scss"
             }],
             "scripts": [],
