--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-server": "^7.2.16",
     "@angular/router": "^7.2.16",
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@swimlane/ngx-charts": "^13.0.2",
     "@types/d3-shape": "^1.3.2",
     "@types/rx": "^4.1.1",
@@ -41,6 +42,7 @@
     "express-session": "^1.17.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
     "mongoose": "^5.9.1",
     "ng2-charts": "^2.3.0",
     "rxjs": "^6.5.4",
@@ -69,6 +71,7 @@
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.2",
+    "ng-bootstrap": "^1.6.3",
     "nodemailer": "^6.4.5",
     "protractor": "^5.4.3",
     "ts-node": "~7.0.1",
