--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
     "express-session": "^1.17.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "mdbootstrap": "^4.14.1",
     "moment": "^2.24.0",
     "mongoose": "^5.9.1",
     "ng2-charts": "^2.3.0",
+    "nodemailer-express-handlebars": "^4.0.0",
+    "nodemailer-handlebars": "^1.0.1",
     "rxjs": "^6.5.4",
     "saas": "^1.0.0",
     "ts-md5": "^1.2.7",
