--- a/angular.json
+++ b/angular.json
@@ -30,35 +30,27 @@
               }
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              {
-                "input": "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss"
-              },
-              {
-                "input": "node_modules/@fortawesome/fontawesome-free/scss/solid.scss"
-              },
-              {
-                "input": "node_modules/@fortawesome/fontawesome-free/scss/regular.scss"
-              },
-              {
-                "input": "node_modules/@fortawesome/fontawesome-free/scss/brands.scss"
-              },
-              {
-                "input": "node_modules/angular-bootstrap-md/scss/bootstrap/bootstrap.scss"
-              },
-              {
-                "input": "node_modules/angular-bootstrap-md/scss/mdb-free.scss"
-              },
-              {
-                "input": "src/styles.scss"
-              }
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss",
+              "node_modules/@fortawesome/fontawesome-free/scss/solid.scss",
+              "node_modules/@fortawesome/fontawesome-free/scss/regular.scss",
+              "node_modules/@fortawesome/fontawesome-free/scss/brands.scss",
+              "node_modules/angular-bootstrap-md/scss/bootstrap/bootstrap.scss",
+              "node_modules/angular-bootstrap-md/scss/mdb-free.scss",
+              "node_modules/mdbootstrap/css/style.css",
+              "node_modules/mdbootstrap/css/mdb.min.css",
+              "node_modules/mdbootstrap/css/bootstrap.min.css",
+              "node_modules/animate.css/animate.css",
+              "src/styles.scss"
             ],
-            "scripts": [{
-                "input": "node_modules/chart.js/dist/Chart.js"
-              },
-              {
-                "input": "node_modules/hammerjs/hammer.min.js"
-              }
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/chart.js/dist/Chart.js",
+              "node_modules/hammerjs/hammer.min.js",
+              "node_modules/mdbootstrap/js/mdb.min.js",
+              "node_modules/mdbootstrap/js/bootstrap.min.js",
+              "node_modules/mdbootstrap/js/popper.min.js",
+              "node_modules/mdbootstrap/js/jquery.min.js"
             ]
           },
           "configurations": {
