--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "@angular/platform-browser-dynamic": "^7.2.16",
     "@angular/platform-server": "^7.2.16",
     "@angular/router": "^7.2.16",
-    "@fortawesome/fontawesome-free": "^5.12.1",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@swimlane/ngx-charts": "^13.0.2",
+    "@types/chart.js": "^2.9.18",
     "@types/d3-shape": "^1.3.2",
     "@types/rx": "^4.1.1",
-    "angular-bootstrap-md": "7.4.1",
+    "animate.css": "^3.7.2",
     "body-parser": "^1.19.0",
-    "chart.js": "^2.9.3",
+    "chart.js": "^2.5.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.6.11",
     "cors": "^2.8.5",
@@ -42,7 +43,8 @@
     "express-session": "^1.17.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "mdbootstrap": "^4.14.1",
+    "jquery": "^3.4.1",
+    "mdbootstrap": "^4.15.0",
     "moment": "^2.24.0",
     "mongoose": "^5.9.1",
     "ng2-charts": "^2.3.0",
@@ -64,7 +66,9 @@
     "@angular/language-service": "^7.2.16",
     "@types/jasmine": "^3.3.16",
     "@types/jasminewd2": "^2.0.8",
+    "@types/jquery": "^3.3.34",
     "@types/node": "^10.12.30",
+    "angular-bootstrap-md": "^7.5.4",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
