--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "d3": "^5.15.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
@@ -54,6 +55,7 @@
     "saas": "^1.0.0",
     "ts-md5": "^1.2.7",
     "web-animations-js": "^2.3.2",
+    "xlsx": "^0.15.6",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
