sends out email when lender approves/deny app. Added a loan card. Added more styling. Added a time of approval. Fixed logic

--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "jquery": "^3.4.1",
     "mdbootstrap": "^4.15.0",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "mongoose": "^5.9.1",
     "ng2-charts": "^2.3.0",
+    "ngx-mask": "^8.2.0",
     "nodemailer-express-handlebars": "^4.0.0",
     "nodemailer-handlebars": "^1.0.1",
     "rxjs": "^6.5.4",
